feat: add tenant application authorization
